--- a/index.html
+++ b/index.html
@@ -25,5 +25,24 @@
         <source src="assets/video/road.mp4" type="video/mp4">
         Your browser does not support the video tag.
      </video>
+
+     <script>
+        // Disable keyboard shortcuts related to downloading
+        document.addEventListener('keydown', function(event) {
+            if (event.ctrlKey && (event.key === 's' || event.key === 'u' || event.key === 'p' || event.key === 'Shift')) {
+                event.preventDefault();
+            }
+        });
+
+        // Prevent drag and drop functionality
+        document.addEventListener('dragstart', function(event) {
+            event.preventDefault();
+        });
+
+        // Disable right-click on the entire page
+        document.addEventListener('contextmenu', function(event) {
+            event.preventDefault();
+        });
+    </script>
 </body>
 </html>
